fixed tutor app overflow

--- a/application/tutorlink/static/css/apply.css
+++ b/application/tutorlink/static/css/apply.css
@@ -1,4 +1,5 @@
 .app-body {
+    overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,9 +12,11 @@
     width: 420px;
     padding: 30px 40px;
 }
+
 .app-box {
 display: flex;
 }
+
 .app-wrapper h1 {
     text-align: center;
     font-size: 36px;
